--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "scheme": "mobileapp224152u",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "main": "App.js",
     "ios": {
       "supportsTablet": true
     },
@@ -26,7 +27,6 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
       [
         "expo-splash-screen",
         {
