refactor: migrate App component to TypeScript and update project structure; remove reset-project script

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "mobileapp224152u",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "main": "App.js",
+    "main": "App.tsx",
     "ios": {
       "supportsTablet": true
     },
